# vocalink

./: .gitignore  README.md  config.json  log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-publish.yml
docs/: PRD.md
locales/: en.json
src/: audio.py  config.py  gui.py  hotkey.py  main.py  overlay.py  transcriber.py
tests/: test_audio.py  test_config.py  test_hotkey.py  test_latency.py  test_transcriber.py
vocalink/: animation.py  config.py  gui.py  localization.py  main.py  transcriber.py
vocalink/locales/: de.json  es.json
