[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalink"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A voice-to-text application with real-time transcription."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyaudio==0.2.14",
    "pynput==1.7.6",
    "pyperclip==1.8.2",
    "faster-whisper==0.10.0",
    "pydantic==2.7.1",
    "pystray==0.19.5",
    "customtkinter==5.2.1",
]

[project.urls]
"Homepage" = "https://github.com/your-username/VocalInk"
"Bug Tracker" = "https://github.com/your-username/VocalInk/issues"

[project.scripts]
vocalink = "src.main:main"