[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalink"
version = "0.1.0"
description = "Voice input into any text field using hotkey + Whisper"
readme = "README.md"
license = "MIT"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "whisper",
  "keyboard",
  "pyautogui",
  "pynput",
  "torch",
  "sounddevice",
  "pyaudio",
  "openai-whisper"
]

[project.urls]
Homepage = "https://github.com/what256/vocalink"
BugTracker = "https://github.com/what256/vocalink/issues"

[project.scripts]
vocalink = "vocalink.main:run"

[tool.setuptools]
packages = ["vocalink"]
