[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalink"
version = "0.1.1"
description = "Voice input into any text field using hotkey + Whisper"
readme = "README.md"
license = "MIT"
authors = [
  { name="Your Name", email="you@example.com" }
]
dependencies = [
  "pystray",
  "pydantic",
  "faster-whisper",
  "customtkinter",
  "pyaudio",
  "pynput",
  "pyperclip"
]

[project.urls]
Homepage = "https://github.com/what256/vocalink"
BugTracker = "https://github.com/what256/vocalink/issues"

[project.scripts]
vocalink = "vocalink.main:run"

[tool.setuptools]
packages = ["vocalink", "vocalink.assets"]

[tool.setuptools.package-data]
"vocalink.assets" = ["logo.png"]